k8s/lab101-monitoring/vm--alert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: alertmanager.vinlab.org
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.vinlab.org
      http:
        paths:
          - backend:
              service:
                name: vmalertmanager-vmalertmanager-additional-service
                port:
                  number: 9093
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - alertmanager.vinlab.org
      secretName: defaultcert
